--- a/style.css
+++ b/style.css
@@ -1,14 +1,26 @@
+@font-face {
+    font-family: 'Sinteca';
+    src: url('Sinteca-VF.woff') format('Woff');
+  }
+
+  @font-face {
+    font-family: 'Safira';
+    src: url('Safira.woff') format('Woff');
+  }
+
 body {
-    font-family: 'Mulish', sans-serif;
+    background-color: #F8E6CF;
+    color: #899685;
+    font-family: 'Sinteca';
     margin: 0;
     padding: 0;
 }
-
 header {
-    background-color: #333;
-    color: white;
+    background-color: #F8E6CF;
+    color: #899685;
     padding: 15px;
     text-align: center;
+    font-family: 'Sinteca';
 }
 
 nav ul {
