--- a/style.css
+++ b/style.css
@@ -37,3 +37,8 @@ nav ul li a {
     color: white;
     text-decoration: none;
 }
+.banner img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
