--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     font-family: 'Sinteca Regular', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F8E6CF;
+    background-color: ##FFFFFF;
     color: #899685;
   }
   /*Menú*/
