--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@
   }
   .menu {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
     gap: 20px; 
     list-style: none;
     padding: 0;
@@ -115,20 +114,20 @@ h1, h2, h3 {
   }
   
   h1 {
-    font-size: 2.5rem;
+    font-size: 88pts;
   }
   
   h2 {
-    font-size: 2rem;
+    font-size: 44pts;
   }
   
   h3 {
-    font-size: 1.8rem;
+    font-size: 32pts;
   }
   
   p {
     font-family: 'Sinteca Regular', sans-serif;
-    font-size: 1rem;
+    font-size: 20pts;
     line-height: 1.6;
   }
 
