--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /*Fuentes importadas*/
 @font-face {
     font-family: 'Sinteca Regular';
@@ -438,6 +439,7 @@ h1, h2, h3 {
   h1 {
     font-size: 2.5rem;
     width: 70%;
+    font-weight: 500;
   }
   
   h2 {
