--- a/style.css
+++ b/style.css
@@ -12,23 +12,13 @@
     src: url('../Tipografía/Safira.woff') format('woff');
   }
   /*Cuerpo*/
-  html, body {
+  body {
     font-family: 'Sinteca Regular', sans-serif;
     margin: 0;
     padding: 0;
     background-color:white;
     color: #899685;
   }
-
-.pagina {
-    min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-main {
-  flex: 1; /* Esto empuja el footer hacia abajo cuando hay poco contenido */
-}
 
   * {
     margin: 0;
