--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     box-sizing: border-box;
   }
 .container{
-    min-height: 100vh; 
+    min-height: 100dvh; 
     display: grid;
     grid-template-rows: auto, 1fr, auto; 
 }
