--- a/style.css
+++ b/style.css
@@ -438,6 +438,7 @@ h1 {
 
 /*h1, h2, h3, p*/
   h1 {
+    font-family: 'Safira', sans-serif;
     font-size: 2.5rem;
     width: 70%;
     font-weight: 400;
@@ -445,15 +446,17 @@ h1 {
   }
   
   h2 {
+    font-family: 'Safira', sans-serif;
     font-size: 2rem;
     font-weight: 400;
-      text-align: left;
+    text-align: left;
   }
   
   h3 {
+    font-family: 'Safira', sans-serif;
     font-size: 1.8rem;
     font-weight: 400;
-      text-align: left;
+    text-align: left;
   }
   
   p {
