--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /*Fuentes importadas*/
 @font-face {
     font-family: 'Sinteca Regular';
-    src: url('Tipografía/Sinteca-Regular.woff') format('woff');
+    src: url('Tipografía/Safira.woff') format('woff');
+
   }
   @font-face {
     font-family: 'Sinteca Bold';
