--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@
 
 /* Caja individual del testimonio */
 .testimonio {
-  background-color: #fcf1eb;
+  background-color: #899685;
   border-radius: 10px;
   padding: 20px;
   width: 300px;
