--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@
 #Historiasdebelleza {
   background-color:white;
   padding: 60px 20px;
-  color: #899685;
+  color: #fcf1eb;
   text-align: center;
 }
 
