--- a/style.css
+++ b/style.css
@@ -25,11 +25,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-.container{
-    display: flex;
-}
-  
+  }  
   /*Menú*/
   header {
     background-color: #fcf1eb;
@@ -245,15 +241,15 @@ font-family: 'Safira';
 
 #TyC {
   background-color: #899685;
-  color:  #fcf1eb; 
+  color: #fcf1eb;
   padding: 1rem;
-  font-size: 1rem; 
-    margin: 0;
-    padding: 0;
-    
-    
+  font-size: 1rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
 }
-
 
 #TyC table {
   width: 100%;
