--- a/style.css
+++ b/style.css
@@ -241,14 +241,11 @@ font-family: 'Safira';
 
 #TyC {
   background-color: #899685;
-  color: #fcf1eb;
+  color:  #fcf1eb; 
   padding: 1rem;
-  font-size: 1rem;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  z-index: 100;
+  font-size: 1rem; 
+    margin: 0;
+    padding: 0;       
 }
 
 #TyC table {
