--- a/style.css
+++ b/style.css
@@ -252,11 +252,12 @@ font-family: 'Safira';
 #TyC {
   background-color: #899685;
   color:  #fcf1eb; 
-  padding: 1rem;
+  padding: 1rem 0;
   font-size: 1rem; 
   margin: 0;
-  margin top: auto;
-  padding: 0;       
+  margin-top: auto;
+  width: 100vw;
+  box-sizing: border-box;
 }
 
 #TyC table {
