--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     margin: 0;
     padding: 0;
     background-color:white;
-    color: #fcf1eb;
+    color: #899685;
   }
 .layout {
   flex: 1;
