--- a/style.css
+++ b/style.css
@@ -435,6 +435,19 @@ button:hover {
   border-radius: 50%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+/* Título principal */
+.titulo-principal {
+    width: 70%;
+    margin: 2rem auto;
+    text-align: center;
+}
+.titulo-principal h1 {
+    font-family: 'Safira', sans-serif;
+    font-size: 2.5rem;
+    color: #899685;
+    font-weight: 400;
+    text-align: center;
+}
 
 /*h1, h2, h3, p*/
   h1 {
