--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ button:hover {
 .titulo-principal {
     width: 70%;
     margin: 2rem auto;
-    text-align: center;
+    text-align: left;
 }
 .titulo-principal h1 {
     font-family: 'Safira', sans-serif;
