--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ button:hover {
     font-size: 2.5rem;
     color: #899685;
     font-weight: 400;
-    text-align: center;
+    text-align: left;
 }
 
 /*h1, h2, h3, p*/
